log
Thu 12 Oct 2023 06:25:51 PM UTC: 
 tests:  0|4
total_score: 0/70
c019b9b
Thu 12 Oct 2023 06:28:07 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:9: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   36 |   Heap* monticulo = (Heap*)malloc(sizeof(Heap));
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b5975f
